1999-09-17  Paul D. Smith  <psmith@gnu.org>

	* Version 3.78 released.

1999-09-16  Paul D. Smith  <psmith@gnu.org>

	* main.c (define_makeflags): Zero out FLAGSTRING to avoid
	uninitialized memory reads when checking *p != '-' in the loop.

1999-09-15  Paul D. Smith  <psmith@gnu.org>

	* Version 3.77.97 released.

	* configure.in (MAKE_HOST): AC_SUBST this so it will go into the
	makefile.
	* Makefile.am (check-local): Print a success banner if the check
	succeeds.
	(check-regression): A bit of fine-tuning.

1999-09-15  Eli Zaretskii  <eliz@is.elta.co.il>

	* README.DOS.template: Document requirements for the test suite.
	* Makefile.DOS.template: Updates to allow the test suite to run
	from "make check".

	* main.c (main): Handle it if argv[0] isn't an absolute path.

1999-09-13  Paul D. Smith  <psmith@gnu.org>

	* Version 3.77.96 released.

	* Makefile.am (loadavg): Use CPPFLAGS, etc. to make sure we get
	all the right #defines to compile.
	(check-regression): Look for the regression test suite in the make
	package itself.  If we're building remotely, use symlinks to make
	a local copy.
	(dist-hook): Put the test suite into the tar file.

	* configure.in: Look for perl for the test suite.

1999-09-10  Paul Eggert  <eggert@twinsun.com>

        * acinclude.m4 (AC_SYS_LARGEFILE_FLAGS): If on HP-UX 10.20 or
        later, and using GCC, define __STDC_EXT__; this works around a
        bug in GCC 2.95.1.

1999-09-08  Paul D. Smith  <psmith@gnu.org>

	* main.c (print_version): Ugh.  GLIBC's configure tries to check
	make version strings and is too aggressive with their matching
	expressions.  I've struck a deal with them to leave the version
	output as-is for 3.78, and they'll change their configure checks
	so that I can change this back in the future.

1999-09-07  Eli Zaretskii  <eliz@is.elta.co.il>

	* job.c (construct_command_argv_internal) [__MSDOS__]: Add "echo"
	and "unset" to the list of builtin shell commands.
